Updated FlashImageServiceTest now that cascadetypes have been added.